--- a/core/src/main/resources/assets/terramc_staff/i18n/en_us.json
+++ b/core/src/main/resources/assets/terramc_staff/i18n/en_us.json
@@ -119,7 +119,7 @@
       },
       "activity": {
         "serverInfo": "Server-Info",
-        "staff": "Team",
+        "reports": "Reports",
         "cloud": "Cloud"
       }
     }
